--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
+    "react-crud-icons": "^1.1.0",
     "react-dom": "^18.1.0",
+    "react-modal": "^3.15.1",
     "react-scripts": "5.0.1",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
